src/css/main.css
/* ... */
.gradient--ceil {
    top: 0;
    background: linear-gradient(180deg, hsla(0, 0%, 0%, 100%) 0%, hsla(0, 0%, 0%, 0%) 100%);
}

.gradient--floor {
    bottom: 0;
    background: linear-gradient(180deg, hsla(0, 0%, 0%, 0%) 0%, hsla(0, 0%, 0%, 100%) 100%);
}

.scroll_indicator,
.scroll_indicator_index {
    position: fixed;
    bottom: 30vh;
    right: 10px;
    z-index: 2;
    width: 50px;
    height: 50px;
    visibility: hidden;
}

.scroll_indicator {
    border: 2px solid hsla(0, 100%, 100%, 20%);
    border-top: 2px solid var(--primary-ui-color);
    border-radius: 50%;
}

.scroll_indicator_index {
    font: 100 1.6rem var(--archivo);
    font-stretch: 112.5%;
    text-align: center;
    line-height: 50px;
    user-select: none;
}

.scroll_hint {
    position: fixed;
    top: 50%;
    left: 50%;
    z-index: -201;
    visibility: hidden;
    font: 800 9vw var(--archivo-extrabold);
    font-stretch: 125%;
    text-transform: uppercase;
    -webkit-text-stroke: 1px hsl(0, 0%, 40%);
    color: hsla(0, 0%, 0%, 0%);
    transform: translate(-50%, -50%);
}

.scroll_layers {visibility: hidden;}

.scroll_layers,
.scroll_layers__page_content_layer,
.scroll_layers__page_title_layer {
    position: absolute;
    width: 100%;
    height: 100vh;
}

.scroll_layers__page_content_layer,
.scroll_layers__page_title_layer {
    display: flex;
    justify-content: center;
    align-items: center;
}

.scroll_layers__page_content_layer {perspective: 3000px;}

.scroll_layers__page_content {
    position: absolute;
    width: 100%;
    height: auto;
}

.scroll_layers__overlay {
    position: fixed;
    width: 100%;
    height: 100vh;
    background: hsla(0, 0%, 0%, 20%);
}

.scroll_layers__page_title,
.scroll_layers__page_title a {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
}

.scroll_layers__page_title {
    width: 100%;
    height: 100%;
    margin: 0;
    font: 800 12vw var(--archivo-extrabold);
    font-stretch: 125%;
}

.scroll_layers__page_title a {
    width: inherit;
    height: 30vw;
    white-space: nowrap;
    pointer-events: none;
}

.scroll_index {
    position: fixed;
    left: 50%;
    bottom: 60px;
    z-index: 2;
    display: none;
    visibility: hidden;
    font: 100 1.6rem var(--archivo);
    font-stretch: 112.5%;
    letter-spacing: 10px;
    transform: translateX(-50%);
    user-select: none;
}

.scroll_index > .scroll_index__number + span {letter-spacing: 0;}

.menu_page_section_container {
    display: flex;
    align-items: center;
    height: 100vh;
}

.menu_page {
    display: flex;
    flex-direction: column;
    width: 60%;
    margin: 0 auto;
}

.menu_page__list {
    margin: 0;
    padding: 0;
    overflow: hidden;
    font: 800 8vw var(--archivo-extrabold);
    font-stretch: 125%;
    list-style-type: none;
}

.menu_page__list_item {
    position: relative;
    text-align: right;
    text-transform: uppercase;
    line-height: 100%;
    user-select: none;
    pointer-events: none;
}

.menu_page__list_item a span {
    -webkit-text-stroke: 1px hsl(0, 0%, 40%);
    color: hsla(0, 0%, 0%, 0%);
}

.menu_page__to_self {cursor: pointer;}

.menu_page__list_item:nth-child(1) a span::after {content: 'works';}
.menu_page__list_item:nth-child(2) a span::after {content: 'contact';}
.menu_page__list_item:nth-child(4) a span::after {content: 'vimeo';}
.menu_page__list_item:nth-child(5) a span::after {content: '@nklav';}
.menu_page__list_item:nth-child(6) a span::after {content: 'store';}

.menu_page__list_item a span::after {
    position: absolute;
    right: 0;
    -webkit-text-stroke: 1px var(--primary-ui-color);
    color: var(--primary-ui-color);
    clip-path: inset(0 0 0 0);
    transition: clip-path .3s ease;
}

.menu_page__list_item a:hover span::after {clip-path: inset(0 0 0 100%);}

.menu_page__footer {
    align-self: flex-start;
    margin: 8vh 0 0 0;
}

.menu_page__to_home {
    display: inline-block;
    width: calc(48px + 50px);
    height: calc(24px + 50px);
    padding: 25px 0 0 25px;
    transform: translateX(-25px);
}

.menu_page__about,
.menu_page__copyright {
    font: 100 1.6rem var(--archivo);
    font-stretch: 112.5%;
}

.menu_page__about {
    width: 190px;
    margin: 5px 0 20px 0;
}

#c {
    position: fixed;
    top: 0;
    z-index: -1;
    width: 100vw;
    height: 100vh;
}

.gl_container {margin: 500px 0 100px 0;}

.gl {
    display: grid;
    grid-template-columns: 180px;
    justify-content: center;
    gap: 100px 0;
}

.gl__to_this {display: block;}

.gl__plane {
    width: 180px;
    height: 101.25px;
}

.gl__plane video {display: none;}

.gl__page_title {
    display: inline-block;
    margin: 20px 0 0 10px;
    font: 100 2.4rem var(--archivo);
    font-stretch: 112.5%;
}

.gl__page_title::after {
    content: '';
    display: block;
    width: 100%;
    height: 1px;
    background: var(--primary-ui-color);
    transform: scaleX(0);
    transition: transform .3s;
}

.gl__to_this:hover .gl__page_title::after {transform: scaleX(1);}

.to_self_back {
    position: relative;
    left: 50%;
    display: inline-block;
    margin: 0 0 150px 0;
    font: 800 8vw var(--archivo);
    font-stretch: 125%;
    text-transform: uppercase;
    -webkit-text-stroke: 1px hsl(0, 0%, 40%);
    color: hsla(0, 0%, 0%, 0%);
    transform: translateX(-50%);
    cursor: pointer;
    user-select: none;
}

.to_self_back::after {
    content: 'top';
    position: absolute;
    left: 0;
    -webkit-text-stroke: 1px var(--primary-ui-color);
    color: var(--primary-ui-color);
    clip-path: inset(0 100% 0 0);
    transition: clip-path .3s ease;
}

.to_self_back:hover::after {clip-path: inset(0 0 0 0);}

.ui_page_transition_component {
    position: fixed;
    width: 100%;
    height: 50vh;
    background: hsl(0, 0%, 0%);
    transform: scaleY(1);
}

.ui_page_transition_component--ceil {
    top: 0;
    transform-origin: top;
}

.ui_page_transition_component--floor {
    bottom: 0;
    transform-origin: bottom;
}
/* ... */

